# projects

./: .agentignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.bak.20260708_105114  CLAUDE.md  CLAUDE.md.bak.20260708_105114  Makefile  README.md  conftest.py  copilot-instructions.md  copilot-instructions.md.bak.20260708_105114  pyproject.toml  tree.txt
JHRMBS/: README.md  pyproject.toml
JHRMBS/config/: default.yml
JHRMBS/docs/: DATA_DICTIONARY.md  IMPLEMENTATION_PLAN.md  MODEL_SPEC.md  MVP_IMPLEMENTATION_REPORT.md  SOURCES.md
JHRMBS/notebooks/: 01_mvp_walkthrough.ipynb
JHRMBS/scripts/: build_sample_notebook.py
JHRMBS/tests/: conftest.py  test_cashflow.py  test_cli.py  test_features_quality.py  test_forecast_cashflow.py  test_ingest.py  test_metrics.py  test_model.py  test_report.py  test_sources.py  test_util.py
WSET/wset_l3_question_corpus/: .env.example  .gitignore  README.md  pyproject.toml
agent-profiler/: README.md  pyproject.toml
agent-profiler/benchmarks/: ingest.py  overhead.py
agent-profiler/docs/: architecture.md  event-schema.md  provider-compatibility.md  security.md  token-accounting.md
agent-profiler/tests/: test_adapters.py  test_ccusage.py  test_metrics.py  test_models.py  test_privacy.py  test_replay_runner.py  test_shell_integration.py  test_storage_report.py  test_tui.py
akinator/: .gitignore  CLAUDE.md  README.md  pyproject.toml
akinator/app/: build.py  config.py  data_loader.py  db.py  main.py  models.py  normalize.py  question_gen.py
akinator/scripts/: build_questions.py  fetch_wikidata_entities.py  seed_data.py
akinator/tests/: conftest.py  test_api.py  test_build_pipeline.py  test_data_loader.py  test_db.py  test_game_service.py  test_normalize.py  test_question_gen.py  test_question_selection.py  test_scoring.py
analytics/bayesian/: .gitignore  README.md  pyproject.toml  requirements.txt
analytics/fourier/: README.md  pyproject.toml  requirements.txt
analytics/linear_algebra/: README.md  pyproject.toml  requirements.txt
analytics/machine_learning/: .gitignore  README.md  pyproject.toml  requirements.txt
analytics/neural_net/: .gitignore  README.md  pyproject.toml  requirements.txt
autostock/: .gitignore  README.md  conftest.py  plot.py  prepare.py  program.md  pyproject.toml  report.html  report.py  strategy.py
autostock/tests/: test_constraints.py  test_engine.py  test_evaluate.py  test_metrics.py  test_plot.py  test_report.py  test_strategy.py
deep_hedge_price/: .gitignore  Makefile  README.md  pyproject.toml
deep_hedge_price/artifacts/: manifest.json
deep_hedge_price/configs/: default.yaml  full.yaml  pricing_default.yaml  pricing_full.yaml  pricing_quick.yaml  quick.yaml  research_dynamics.yaml  research_surface.yaml
deep_hedge_price/docs/: METHODOLOGY.md  ROADMAP_DEEP_PRICING.md
deep_hedge_price/notebooks/: 01_deep_hedging_european_call.ipynb  02_neural_pricing_surrogate.ipynb
deep_hedge_price/reports/: 01_deep_hedging_european_call.html  02_neural_pricing_surrogate.html  pricing_ablation_quick.json
deep_hedge_price/scripts/: execute_notebook.py  export_johnhull_pricing_reference.py  run_demo.py  run_sensitivity.py
deep_hedge_price/tests/: conftest.py  test_arbitrage.py  test_black_scholes.py  test_docstrings.py  test_feature_diagnostics.py  test_frontier_reference.py  test_hedge_capstone.py  test_model_index.py  test_pnl.py  test_policy.py  test_pricing_ablation.py  test_pricing_artifacts.py  test_pricing_benchmark.py  test_pricing_calibration.py  test_pricing_config.py  test_pricing_data.py  test_pricing_evaluation.py  test_pricing_greeks.py  test_pricing_losses.py  test_pricing_policy.py  test_pricing_report.py  test_pricing_residuals.py  test_pricing_training_smoke.py  test_report.py  test_research_models.py  test_risks.py  test_simulation.py  test_surface_data.py  test_surface_hedge_pipeline.py  test_training_smoke.py  test_volatility_data.py  test_walk_forward.py
gto/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEV.md  Dockerfile  IMPLEMENTATION.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
gto/docs/: development-environments.md  development-plan.md  milestone-matrix.md
gto/mobile/: App.tsx  package.json  tsconfig.json
gto/scripts/: build_preflop_fixture.py
health/: .env.example  CLAUDE.md  README.md  pyproject.toml
investment-research-platform/: README.md  pyproject.toml  requirements.txt
jp_llm_lab/: .gitignore  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  Makefile  README.md  pyproject.toml
land_price_api_app/: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS_AND_ENHANCEMENT_PLAN.md  README.md  analytics.py  api_client.py  app.py  collect_listings_batch.py  collect_search_results.py  config.py  download_flood_hazard.py  facility_sources.py  generate_site_schema.py  geocode_trade_prices.py  geocoder.py  hazard_sources.py  market_lake.py  modeling.py  normalize.py  notebook_utils.py  property_persistence.py  property_scraper.py  property_state.py  pyproject.toml  recompute_listing_features.py  recompute_market_features.py  recompute_public_notice_features.py  requirements.txt  run_backfill.py  run_local.sh  run_sync.py  stop_local.sh  sync_market_lake.py  sync_population.py  sync_public_notice.py  sync_rent_market.py  sync_suumo_rent_market.py  sync_trade_prices.py  terrain_sources.py  (+4 more)
line_backup/: .gitignore  CLAUDE.md  README.md  pyproject.toml
market-viz/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
market_nn/: .gitignore  HANDOFF.md  Makefile  README.md  pyproject.toml
nbody-gpu/: .gitignore  CLAUDE.md  README.md  pyproject.toml
optimal_execution/: .gitignore  Makefile  README.md  pyproject.toml
re_invest_os/: .gitignore  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
rough_volatility/: .gitignore  Makefile  README.md  pyproject.toml
shortest_path/: README.md  pyproject.toml
stock/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml  start.sh
(+4465 files in other folders)
