# Workspace root — NOT a buildable package itself.
# Each member project has its own [project] block and is buildable.

[project]
name = "projects-workspace"
version = "0"
description = "Multi-project workspace root (virtual, non-buildable)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "gto",
    "market-viz",
    "stock",
    "nbody-gpu",
    "line_backup",
    "re_invest_os/apps/api",
    "re_invest_os/packages/financial-engine",
]

# PyTorch CUDA 12.6 — used by `gto`. Defined here so all workspace members
# resolve the same `torch` build.
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
re-engine = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# Shared dev tooling — installed for every member by default.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "anyio>=4.0",
]

# Shared ruff config — projects can override their own ruff in member pyprojects.
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
    "target",
    "_archive",
    "_data",
    "_logs",
    "_scratch",
    "node_modules",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # function call in default arg (FastAPI pattern)
    "RUF001", # ambiguous unicode (we write Japanese in source)
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "gto/tests",
    "market-viz/tests",
    "stock/tests",
    "nbody-gpu/tests",
    "line_backup/tests",
    "re_invest_os/apps/api/tests",
    "re_invest_os/packages/financial-engine/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
