# Workspace root — NOT a buildable package itself.
# Each member project has its own [project] block and is buildable.

[project]
name = "projects-workspace"
version = "0"
description = "Multi-project workspace root (virtual, non-buildable)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "gto",
    "market-viz",
    "stock",
    "nbody-gpu",
    "line_backup",
    "land_price_api_app",
    "akinator",
    "johnhull/hullkit",
]

# PyTorch CUDA 12.8 — used by `gto`. Defined here so all workspace members
# resolve the same `torch` build. CUDA 12.8 is required for RTX 5080 / Blackwell
# (sm_120): the cu126 build only ships kernels up to sm_90, and its bundled
# nvrtc 12.6 cannot JIT sm_120 (CuPy hit CUDA_ERROR_NO_BINARY_FOR_GPU).
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Shared dev tooling — installed for every member by default.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "anyio>=4.0",
]

# Shared ruff config — projects can override their own ruff in member pyprojects.
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
    "target",
    "_archive",
    "_data",
    "_logs",
    "_scratch",
    "node_modules",
    "*.ipynb",
    # Notebook builder scripts emit Python source as strings; ruff misparses them.
    "**/build_*_notebook.py",
    "**/build_*_nb.py",
    "**/patch_*_nb.py",
    "**/generate_notebook_part*.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # function call in default arg (FastAPI pattern)
    "RUF001", # ambiguous unicode (we write Japanese in source)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Math / finance code commonly uses single-letter and uppercase variables
# (S0, K, T, r, sigma, ...). Allow PEP-8 naming exceptions there.
"rates_volatility_model/**/*.py" = ["N803", "N806", "N816", "E741"]
"johnhull/**/*.py" = ["N803", "N806", "N816", "E741"]
"notebooks/**/*.py" = ["E402", "F401", "F841", "N803", "N806"]
# Tests can have unused variables / imports for fixture-driven patterns.
"**/tests/**/*.py" = ["F841", "F401"]
# Entry-point scripts often need path / env setup before imports.
"**/app.py" = ["E402"]
"**/main.py" = ["E402"]
"**/run_*.py" = ["E402"]
"**/download_*.py" = ["E402"]
"**/recompute_*.py" = ["E402"]
"**/build_*.py" = ["E402"]
"land_price_api_app/test_suite_validation.py" = ["E402"]
"rates_volatility_model/test_suite_validation.py" = ["E402"]
# __init__.py commonly re-exports symbols; allow F401 there.
"**/__init__.py" = ["F401"]
# gto solver: low-level GPU code uses single-letter math notation.
"gto/src/gto/solver/**/*.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "gto/tests",
    "market-viz/tests",
    "stock/tests",
    "nbody-gpu/tests",
    "line_backup/tests",
    "akinator/tests",
    "johnhull/hullkit/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# importlib import mode: every member project ships a `tests/` package, and the
# default prepend mode makes those identically-named packages shadow each other
# in a single root run (ModuleNotFoundError on tests.<name>). importlib gives
# each test file a path-unique module name, so the full-workspace run collects.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
