# Workspace root — NOT a buildable package itself.
# Each member project has its own [project] block and is buildable.

[project]
name = "projects-workspace"
version = "0"
description = "Multi-project workspace root (virtual, non-buildable)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "JHRMBS",
    "gto",
    "market-viz",
    "stock",
    "nbody-gpu",
    "line_backup",
    "akinator",
    "autostock",
    "health",
    "johnhull/hullkit",
    "analytics/linear_algebra",
    "analytics/neural_net",
    "analytics/bayesian",
    "analytics/laplace",
    "analytics/fourier",
    "analytics/differential_equation/ode-book",
    "analytics/differential_equation/pde-book",
    "analytics/machine_learning",
    "quantkit",
    "deep_hedge_price",
    "optimal_execution",
    "rough_volatility",
    "jp_llm_lab",
    "market_nn",
]

# PyTorch CUDA 12.8 — used by `gto`. Defined here so all workspace members
# resolve the same `torch` build. CUDA 12.8 is required for RTX 5080 / Blackwell
# (sm_120): the cu126 build only ships kernels up to sm_90, and its bundled
# nvrtc 12.6 cannot JIT sm_120 (CuPy hit CUDA_ERROR_NO_BINARY_FOR_GPU).
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Shared dev tooling — installed for every member by default.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "anyio>=4.0",
]

# Shared ruff config — projects can override their own ruff in member pyprojects.
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
    "target",
    "_archive",
    "_data",
    "_logs",
    "_scratch",
    "node_modules",
    "*.ipynb",
    # Notebook builder scripts emit Python source as strings; ruff misparses them.
    "**/build_*_notebook.py",
    "**/build_*_nb.py",
    "**/patch_*_nb.py",
    "**/generate_notebook_part*.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # function call in default arg (FastAPI pattern)
    "RUF001", # ambiguous unicode (we write Japanese in source)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Math / finance code commonly uses single-letter and uppercase variables
# (S0, K, T, r, sigma, ...). Allow PEP-8 naming exceptions there.
"rates_volatility_model/**/*.py" = ["N803", "N806", "N816", "E741"]
"johnhull/**/*.py" = ["N803", "N806", "N816", "E741"]
"autostock/**/*.py" = ["N803", "N806", "N816", "E741"]
"quantkit/**/*.py" = ["N803", "N806", "N812", "N816", "E741"]
"optimal_execution/**/*.py" = ["N803", "N806", "N816", "E741"]
"rough_volatility/**/*.py" = ["N803", "N806", "N816", "E741"]
# jp_llm_lab: tensor-shape notation (B, T, D, H, V) follows the LLM literature.
"jp_llm_lab/**/*.py" = ["N803", "N806", "N812", "N816", "E741"]
"analytics/**/*.py" = ["N802", "N803", "N806", "N812", "N816", "E741"]
"notebooks/**/*.py" = ["E402", "F401", "F841", "N803", "N806"]
# Tests can have unused variables / imports for fixture-driven patterns.
"**/tests/**/*.py" = ["F841", "F401"]
# Entry-point scripts often need path / env setup before imports.
"**/app.py" = ["E402"]
"**/main.py" = ["E402"]
"**/run_*.py" = ["E402"]
"**/download_*.py" = ["E402"]
"**/recompute_*.py" = ["E402"]
"**/build_*.py" = ["E402"]
"rates_volatility_model/test_suite_validation.py" = ["E402"]
# __init__.py commonly re-exports symbols; allow F401 there.
"**/__init__.py" = ["F401"]
# gto solver: low-level GPU code uses single-letter math notation.
"gto/src/gto/solver/**/*.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [
    "shortest_path/src",
]
testpaths = [
    "JHRMBS/tests",
    "gto/tests",
    "market-viz/tests",
    "stock/tests",
    "nbody-gpu/tests",
    "line_backup/tests",
    "akinator/tests",
    "autostock/tests",
    "health/tests",
    "johnhull/hullkit/tests",
    "analytics/linear_algebra/tests",
    "analytics/neural_net/tests",
    "analytics/bayesian/tests",
    "analytics/laplace/tests",
    "analytics/report/tests",
    "analytics/differential_equation/ode-book/tests",
    "analytics/differential_equation/pde-book/tests",
    "analytics/machine_learning/tests",
    "quantkit/tests",
    "optimal_execution/tests",
    "rough_volatility/tests",
    "jp_llm_lab/tests",
    "shortest_path/tests",
    "market_nn/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# importlib import mode: every member project ships a `tests/` package, and the
# default prepend mode makes those identically-named packages shadow each other
# in a single root run (ModuleNotFoundError on tests.<name>). importlib gives
# each test file a path-unique module name, so the full-workspace run collects.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
