[project]
name = "jhrmbs"
version = "0.1.0"
description = "Public-data analytics for Japan Housing Finance Agency MBS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<4",
    "pyarrow>=15",
    "pyyaml>=6,<7",
    "scipy>=1.11,<2",
    "xlrd>=2.0.1,<3",
]

[project.scripts]
jhrmbs = "jhrmbs.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "mypy>=1.11",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "pandas-stubs>=2.2",
    "pytest>=8.3",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=sys"
markers = [
    "network: requires live public network access",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["xlrd.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true
