[project]
name = "autostock"
version = "0.1.0"
description = "Autonomous trading-strategy research swarm (autoresearch port, Mag7)"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
]

# Virtual member: scripts live at the project root (prepare.py / strategy.py),
# no wheel is built. Dependencies still resolve into the shared workspace env.
[tool.uv]
package = false
