[project]
name = "gto"
version = "0.1.0"
description = "GTO Poker Suite"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "maturin>=1.7",
    "pydantic>=2.0",
    "duckdb>=1.0",
    "torch>=2.6.0",
    "numpy>=2.0",
]

# NOTE: torch index ("pytorch-cu126") and [tool.uv.sources] are declared at the
# workspace root (../pyproject.toml) so all members share the same torch build.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
