[project]
name = "health"
version = "0.1.0"
description = "Personal Google Health dashboard (Streamlit + Plotly + DuckDB)"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.51",
    "plotly>=6.0",
    "duckdb>=1.1",
    "pandas>=2.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
