[project]
name = "irp"
version = "0.1.0"
description = "Local multi-asset investment research platform (free data, research-only)"
readme = "README.md"
authors = [{ name = "Kazumasa", email = "kikeuchi1210@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "yfinance>=0.2.50",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "plotly>=5.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access (deselected by default)",
]
