[project]
name = "jp-llm-lab"
version = "0.1.0"
description = "Educational Japanese LLM lab — visualization-first small decoder-only Transformer built from scratch"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "pandas>=2.0",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jp_llm_lab"]
