[project]
name = "land-price-api-app"
version = "0.1.0"
description = "国土交通省 不動産情報ライブラリ API のローカル地価/取引アプリ"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
    "duckdb>=0.10",
    "pyarrow>=14.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "plotly>=5.18",
    "shapely>=2.0",
    "pyshp>=2.3",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

# Flat layout app (no installable package). uv tracks deps for the workspace,
# but does not try to build/install this project.
[tool.uv]
package = false
