[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "line-backup-exporter"
version = "0.1.0"
description = "Local iPhone backup LINE data analyzer"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
line-backup-exporter = "line_backup_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
