[project]
name = "market-viz"
version = "0.1.0"
description = "Personal market visualization & analysis app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.1",
    "yfinance>=0.2.40",
    "ccxt>=4.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
