[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lob-paper-reproductions"
version = "0.1.0"
description = "Paper-faithful structural reproductions of limit-order-book prediction studies"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kazumasa" }]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=18",
    "pyyaml>=6",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "torch>=2.5",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.16,<2.22"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
lob-repro = "lob_reproductions.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lob_reproductions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "N803", "N806"]
