[project]
name = "nbody-gpu"
version = "0.1.0"
description = "GPU-accelerated N-body simulation with real-time 3D visualization"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "cupy-cuda12x>=14.0",
    "vispy>=0.14",
    "PyQt6>=6.7",
    "imageio>=2.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbody"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
