[project]
name = "optimal-execution"
version = "0.1.0"
description = "Market microstructure and optimal execution visual lab with bilingual (EN/JA) reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "latex2mathml>=3.77",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.20",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbclient>=0.10",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
optimal-execution = "optimal_execution.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: stochastic integration tests (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
    "N803",
    "N806",
]
