[project]
name = "re_invest_os"
version = "0.1.0"
description = "個人投資家のための不動産投資DD・買付前監査Webアプリ — Python ルートワークスペース"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/financial-engine",
    "packages/document-schemas",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "venv", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI uses this)
    "RUF001", # ambiguous unicode (we write Japanese in source)
    "RUF002", # same, in docstrings
    "RUF003", # same, in comments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages/financial-engine/tests", "apps/api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.13.0",
]
