[project]
name = "rough-volatility"
version = "0.1.0"
description = "Synthetic rough volatility and volatility microstructure visual lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "nbclient>=0.9",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rough_volatility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long stochastic integration tests",
]
