[project]
name = "stockkit"
version = "0.1.0"
description = "Stock analysis toolkit for JP/US markets (yfinance-based)"
readme = "README.md"
authors = [
    { name = "Kazumasa", email = "kikeuchi1210@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "plotly>=5.24",
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "scipy>=1.13",
    "python-dateutil>=2.9",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "fredapi>=0.5",
    "anthropic>=0.102.0",
    "lxml>=6.1.1",
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access (deselected by default)",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"
