[project]
name = "wset-l3-question-corpus"
version = "0.1.0"
description = "Local research corpus for WSET Level 3 question-source analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "chompjs>=1.4",
  "duckdb>=1.4",
  "httpx>=0.28",
  "jinja2>=3.1",
  "lxml>=5.3",
  "pydantic>=2.10",
  "pypdf>=5.1",
  "pyyaml>=6.0",
  "rapidfuzz>=3.11",
  "trafilatura>=2.0",
]

[project.optional-dependencies]
analysis = ["pandas>=2.2", "plotly>=6.0", "scikit-learn>=1.6"]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.14",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "pytest>=8.3",
  "ruff>=0.9",
  "types-pyyaml>=6.0",
]
semantic = ["sentence-transformers>=3.4"]
translation = ["sentencepiece>=0.2", "torch>=2.6", "transformers>=4.57,<5"]

[project.scripts]
wset-corpus = "wset_corpus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wset_corpus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_notebooks.py" = ["E501"]
"scripts/build_quality_artifact.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["wset_corpus"]
