[project]
name = "bayes-textbook"
version = "0.1.0"
description = "Interactive Jupyter-Book Bayesian inference textbook (Japanese): prior -> likelihood -> posterior, hands-on"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "ipywidgets>=8.1",
    "pymc>=5.16",
    "arviz>=0.18",
    "jupyterlab>=4.2",
    "jupyter-book>=1.0,<2",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayes_textbook"]
