[project]
name = "nn-textbook"
version = "0.1.0"
description = "Interactive Jupyter-Book neural-network textbook (Japanese): intuition + minimal math + NumPy/PyTorch from scratch"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "ipywidgets>=8.1",
    "scikit-learn>=1.5",
    "torch>=2.6",
    "torchvision>=0.21",
    "networkx>=3.3",
    "tqdm>=4.66",
    "jupyterlab>=4.2",
    "jupyter-book>=1.0,<2",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nn_textbook"]
