[project]
name = "hullkit"
version = "0.1.0"
description = "Shared pricing / simulation / notebook-plotting utilities for the johnhull Hull 11e notebooks"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "japanize-matplotlib>=1.1",
    "ipywidgets>=8.1",
    "ipympl>=0.9",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbconvert>=7.16",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hullkit"]
