[package]
name = "gto-hu"
version = "0.1.0"
edition = "2021"
description = "Abstract HU NLHE equilibrium solver (not an unabstracted full GTO solver)"

[dependencies]
gto-core = { path = "../gto-core" }
rayon = "1.10"

[[bin]]
name = "solve-hu-river"
path = "src/bin/solve_river.rs"

[[bin]]
name = "solve-hu-turn-river"
path = "src/bin/solve_turn_river.rs"

[[bin]]
name = "solve-hu-flop"
path = "src/bin/solve_flop.rs"

[[bin]]
name = "solve-hu-preflop"
path = "src/bin/solve_preflop.rs"
